[gd_scene load_steps=11 format=3 uid="uid://cr6gxpsfv8smi"]

[ext_resource type="PackedScene" uid="uid://dokhf2kxnp36j" path="res://Player/knife.tscn" id="1_pmscf"]
[ext_resource type="Script" path="res://Scene/back_ground.gd" id="1_x5b60"]
[ext_resource type="Texture2D" uid="uid://fcm77ncaf881" path="res://Art/white.png" id="4_7a04i"]
[ext_resource type="Texture2D" uid="uid://b2wtvx6s8xe6s" path="res://Art/quit.png" id="4_lrs0x"]
[ext_resource type="Texture2D" uid="uid://dyaiemc8wuiig" path="res://Art/restart.png" id="5_ykb8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4skd2"]
size = Vector2(256, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uco5b"]
size = Vector2(10, 123)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aekwp"]
size = Vector2(236, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfggl"]
size = Vector2(30, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdvj6"]
size = Vector2(21, 11)

[node name="BackGround" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 1)
script = ExtResource("1_x5b60")
metadata/_edit_horizontal_guides_ = [135.0, 25.0]
metadata/_edit_vertical_guides_ = [15.0, 240.0]

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="num" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 10
text = "Scour:"

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control2"]
custom_minimum_size = Vector2(255, 141.69)
layout_mode = 0
offset_left = 1.0
offset_top = 19.0
offset_right = 256.0
offset_bottom = 160.69

[node name="EndLabel" type="Label" parent="Control2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 56.0
offset_right = 156.0
offset_bottom = 79.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "text"

[node name="Knife" parent="." instance=ExtResource("1_pmscf")]

[node name="parame" type="Node2D" parent="."]

[node name="SmallParame" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(5, 80)
scale = Vector2(1.2, 17)
texture = ExtResource("4_7a04i")

[node name="Sprite2D2" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(251, 80)
scale = Vector2(1.2, 17)
texture = ExtResource("4_7a04i")

[node name="Sprite2D3" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(129, 16)
scale = Vector2(30, 1)
texture = ExtResource("4_7a04i")

[node name="Sprite2D4" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(129, 142)
scale = Vector2(30, 1)
texture = ExtResource("4_7a04i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, 16)
shape = SubResource("RectangleShape2D_4skd2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5, 81.5)
shape = SubResource("RectangleShape2D_uco5b")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(251, 82)
shape = SubResource("RectangleShape2D_uco5b")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(128, 141)
shape = SubResource("RectangleShape2D_aekwp")

[node name="Quit" type="Area2D" parent="."]
position = Vector2(234, 10)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit"]
position = Vector2(4, -4)
shape = SubResource("RectangleShape2D_wfggl")

[node name="Sprite2D" type="Sprite2D" parent="Quit"]
position = Vector2(4, -4)
texture = ExtResource("4_lrs0x")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(185.5, 5.5)
shape = SubResource("RectangleShape2D_vdvj6")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(186, 5)
texture = ExtResource("5_ykb8e")

[connection signal="area_entered" from="Quit" to="." method="_on_quit_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
